feat: removendo anotações e atualizando o getAuthorities